--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,6 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.6.0")
     kapt "androidx.room:room-compiler:2.6.0"
 
+    //web-socket
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
 }
