--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Electrica
 server.port=8086
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/electrica_devices?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/electrica_devices?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Bifidus1!
 
